--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.15.3</version>
+        </dependency>
 <!--        <dependency>-->
 <!--            <groupId>com.vaadin</groupId>-->
 <!--            &lt;!&ndash; Replace artifactId with vaadin-core to use only free components &ndash;&gt;-->
