Update recipe tags management to use List instead of String
Replaced the `tags` field in `Recipe` with a `List<String>` to enable better handling of tags as individual entities. Updated service, views, repository, and models accordingly to support the new structure. Introduced a method to fetch distinct tags and updated UI components to display tags as chips.

--- a/src/main/resources/autoconfig/Recipe.yml
+++ b/src/main/resources/autoconfig/Recipe.yml
@@ -64,7 +64,7 @@ columns:
     inSaveForm: true
     inEditForm: true
     inTable: false
-    max: 500
+    extension: "VaadinDynamicMultiDropdownBervanColumn"
 
   - field: requiredEquipment
     displayName: "Equipment"
