Add multi-select support for tags in recipe detail view
Introduced a new `MULTI_SELECT` field type in `InlineEditableField` to allow multi-select input handling. Updated the recipe detail view to use this feature for tags, enabling inline editable multi-selection with tag suggestions and dynamic saving. Adjusted configuration to align with the new functionality.

--- a/src/main/resources/autoconfig/Recipe.yml
+++ b/src/main/resources/autoconfig/Recipe.yml
@@ -60,7 +60,7 @@ columns:
 
   - field: tags
     displayName: "Tags"
-    internalNameField: "Recipe_tags_columnName"
+    internalName: "tags"
     inSaveForm: true
     inEditForm: true
     inTable: false
