Add support for recipe main image, category grouping, and rating count
Introduced functionality for handling recipe main image URLs and displaying them in the UI, along with grouping ingredients by category. Enhanced rating system to include count, half-star visuals, and editable fields. Updated Dockerfile and styles to support these changes.

--- a/src/main/resources/autoconfig/Recipe.yml
+++ b/src/main/resources/autoconfig/Recipe.yml
@@ -16,6 +16,14 @@ columns:
     inEditForm: true
     inTable: false
 
+  - field: mainImageUrl
+    displayName: "Image URL"
+    internalName: "mainImageUrl"
+    inSaveForm: true
+    inEditForm: true
+    inTable: false
+    max: 1000
+
   - field: prepTime
     displayName: "Prep Time (min)"
     internalNameField: "Recipe_prepTime_columnName"
@@ -53,10 +61,17 @@ columns:
 
   - field: averageRating
     displayName: "Rating"
-    internalNameField: "Recipe_averageRating_columnName"
-    inSaveForm: false
-    inEditForm: false
+    internalName: "averageRating"
+    inSaveForm: true
+    inEditForm: true
     inTable: true
+
+  - field: ratingCount
+    displayName: "Rating Count"
+    internalName: "ratingCount"
+    inSaveForm: true
+    inEditForm: true
+    inTable: false
 
   - field: tags
     displayName: "Tags"
